# Ocean

./: CMakeLists.txt  Makefile  README.txt
src/: Dvector.cpp  Dvector.h  GerstnerWave.cpp  GerstnerWave.h  GerstnerWaveModel.cpp  GerstnerWaveModel.h  Height.cpp  Height.h  PhilipsWave.cpp  PhilipsWave.h  PhilipsWaveModel.cpp  PhilipsWaveModel.h  Utils.cpp  Utils.h  WaveModel.cpp  WaveModel.h  camera.cpp  main.cpp  ocean.cpp  ocean.h  window.cpp  window.h
srcMat/: Analyse.txt  prodmat_ijk.C  prodmat_ikj.C
test/: hauteurs.cpp  operateurs.cpp  resize.cpp  testFft.cpp  testFft2D.cpp  testGerstner.cpp  testGerstnerWaveModel.cpp  testMat.cpp  testPhilipsWave.cpp  testPhilipsWaveModel.cpp  testProdScal.cpp  testTime.cpp  vect.cpp
